--- a/timetree_styles.css
+++ b/timetree_styles.css
@@ -14,12 +14,12 @@ li.event{
 }
 
 div.event{
-  width: 300px;
+  width: 400px;
   display: inline-block;
   padding-top: 0px;
   white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  /* overflow: hidden;
+  text-overflow: ellipsis; */
 }
 
 ul.time{
